# Rosbot2R

./: package.xml  ps4_controller_client.py  receive_image_server.py  server.py
src/: read_image.cpp
src/data_collection/: CMakeLists.txt  package.xml
src/data_collection/include/: CameraNode.hpp
src/data_collection/src/: camera_main.cpp
src/data_collection/src/data_collection/: CameraNode.cpp
src/fsm_bumpgo/: CMakeLists.txt  package.xml
src/fsm_bumpgo/include/fsm_bumpgo/: BumpGoNode.hpp
src/fsm_bumpgo/launch/: bump_and_go.launch.py
src/fsm_bumpgo/src/: bumpgo_main.cpp
src/fsm_bumpgo/src/fsm_bumpgo/: BumpGoNode.cpp
src/ltc_controller/: package.xml  setup.cfg  setup.py
src/ltc_controller/ltc_controller/: ServerConnection.py  ltc_controller_main.py
src/read_image/: CMakeLists.txt
src/save_data/: CMakeLists.txt  package.xml
src/save_data/include/save_data/: SaveDataNode.hpp
src/save_data/launch/: save_data.launch.py
src/save_data/src/: save_data_main.cpp
src/save_data/src/save_data/: SaveDataNode.cpp
src/teleop_ps4_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/teleop_ps4_controller/src/: teleop_ps4_controller.cpp
src/teleop_ps4_controller/teleop_ps4_controller/: teleop_main.py
teleop_ps4_controller/src/: teleop_ps4_controller.cpp
testing/: inference.py  net.py  server.py
